- add-cart modal - js to open modal

--- a/source/index.html
+++ b/source/index.html
@@ -117,7 +117,7 @@
             alt="Товар недели">
         </picture>
         <span class="product-of-week__price">Цена: 990 руб.</span>
-        <a class="product-of-week__buy button" href="form.html">Заказать</a>
+        <a class="product-of-week__buy button button--modal" href="form.html">Заказать</a>
       </div>
     </article>
 
@@ -254,6 +254,34 @@
       </a>
     </div>
   </footer>
+  <section class="modal modal--add-to-cart">
+    <div class="modal__overlay">
+      <div class="modal__container">
+        <h2 class="modal__title">Добавить в корзину</h2>
+        <form class="add-to-cart" action="https://echo.htmlacademy.ru" method="post">
+          <fieldset class="add-to-cart__fieldset">
+            <legend class="add-to-cart__legend">Выберите размер:</legend>
+            <div class="add-to-cart__inputs-wrapper">
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="S" type="radio" name="size" checked>
+                <span class="add-to-cart__radio">S</span>
+              </label>
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="M" type="radio" name="size">
+                <span class="add-to-cart__radio">M</span>
+              </label>
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="L" type="radio" name="size">
+                <span class="add-to-cart__radio">L</span>
+              </label>
+            </div>
+          </fieldset>
+
+          <button class="add-to-cart__button add-to-cart__button--submit" type="submit">Добавить</button>
+        </form>
+      </div>
+    </div>
+  </section>
   <script src="./js/script.js"></script>
   <script src="js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
