--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,14 +34,14 @@
       </ul>
       <ul class="main-nav__list main-nav__list--search-checkout">
         <li class="main-nav__item main-nav__item--search">
-          <svg class="user-list__icon" width="18" height="18">
-            <use xlink:href="./img/sprite.svg#icon-search"></use>
+          <svg class="main-nav__icon main-nav__icon--search" width="18" height="18">
+            <use xlink:href="img/sprite.svg#icon-search"></use>
           </svg>
           <a href="#">Поиск по сайту</a>
         </li>
         <li class="main-nav__item main-nav__item--cart">
-          <svg class="user-list__icon" width="20.2" height="18.8">
-            <use xlink:href="./img/sprite.svg#icon-bag"></use>
+          <svg class="main-nav__icon main-nav__icon--cart" width="18" height="18">
+            <use xlink:href="img/sprite.svg#icon-cart"></use>
           </svg>
           <a href="#">Корзина: пока пуста</a>
         </li>
@@ -94,7 +94,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 200 руб.</b>
-              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
+              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#"></a>
             </div>
           </div>
         </li>
@@ -124,7 +124,7 @@
 
             <div class="product-card__footer">
               <b class="product-card__price">690 руб.</b>
-              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
+              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#"></a>
             </div>
           </div>
 
@@ -153,7 +153,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 500 руб.</b>
-              <a class="product-card__cart" aria-label="Добавить в корзину" href="#"></a>
+              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#"></a>
             </div>
           </div>
         </li>
@@ -228,6 +228,35 @@
         </svg>
       </a>
     </div>
+    <section class="modal modal--add-to-cart">
+      <div class="modal__overlay">
+        <div class="modal__container">
+          <h2 class="modal__title">Добавить в корзину</h2>
+          <form class="add-to-cart" action="https://echo.htmlacademy.ru" method="post">
+            <fieldset class="add-to-cart__fieldset">
+              <legend class="add-to-cart__legend">Выберите размер:</legend>
+              <div class="add-to-cart__inputs-wrapper">
+                <label class="add-to-cart__label">
+                  <input class="add-to-cart__input add-to-cart__input--radio" value="S" type="radio" name="size"
+                    checked>
+                  <span class="add-to-cart__radio">S</span>
+                </label>
+                <label class="add-to-cart__label">
+                  <input class="add-to-cart__input add-to-cart__input--radio" value="M" type="radio" name="size">
+                  <span class="add-to-cart__radio">M</span>
+                </label>
+                <label class="add-to-cart__label">
+                  <input class="add-to-cart__input add-to-cart__input--radio" value="L" type="radio" name="size">
+                  <span class="add-to-cart__radio">L</span>
+                </label>
+              </div>
+            </fieldset>
+
+            <button class="add-to-cart__button add-to-cart__button--submit" type="submit">Добавить</button>
+          </form>
+        </div>
+      </div>
+    </section>
   </footer>
   <script src="js/script.js"></script>
   <script src="js/svg4everybody.min.js"></script>
