--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 
   <title>HTML Academy: Мишка</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" async></script>
