--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,14 @@
         </picture>
       </a>
 
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
+        <svg class="main-nav__toggle-icon main-nav__toggle-icon--open" width="18" height="18">
+          <use xlink:href="img/sprite.svg#icon-menu-open"></use>
+        </svg>
+        <svg class="main-nav__toggle-icon main-nav__toggle-icon--close" width="18" height="18">
+          <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+        </svg>
+      </button>
 
       <ul class="main-nav__list main-nav__list--catalog-form">
         <li class="main-nav__item main-nav__item--catalog">
@@ -65,7 +72,7 @@
     </div>
 
     <div class="header__title-wrapper header__title-wrapper--hero">
-      <h1 class="header__title header__title--hero">Милые штуки ручной <br />работы&nbsp;для дома</h1>
+      <h1 class="header__title header__title--hero">Милые штуки ручной&nbsp;<br /> работы&nbsp;для дома</h1>
       <ul class="header__categories categories">
         <li class="categories__item categories__item--interior">
           <a href="#">Предметы интерьера</a>
@@ -215,7 +222,7 @@
 
   <footer class="footer">
     <a class="footer__logo">
-      <svg class="footer__logo-image" width="102" height="34" aria-label="Мишка">
+      <svg class="footer__logo-icon" width="102" height="34" aria-label="Мишка">
         <use xlink:href="img/sprite.svg#logo-footer"></use>
       </svg>
     </a>
@@ -223,7 +230,7 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-            <svg width="22" height="21" aria-label="Мы в Инстаграме">
+            <svg class="social__icon" width="22" height="21" aria-label="Мы в Инстаграме">
               <use xlink:href="img/sprite.svg#icon-insta"></use>
             </svg>
           </a>
@@ -231,14 +238,14 @@
         <li class="social__item">
           <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
 
-            <svg width="15" height="28" aria-label="Мы в Фейсбуке">
+            <svg class="social__icon" width="15" height="28" aria-label="Мы в Фейсбуке">
               <use xlink:href="img/sprite.svg#icon-fb"></use>
             </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
-            <svg width="23" height="20" aria-label="Мы в Твиттере">
+            <svg class="social__icon" width="23" height="20" aria-label="Мы в Твиттере">
               <use xlink:href="img/sprite.svg#icon-twitter"></use>
             </svg>
           </a>
@@ -246,9 +253,9 @@
       </ul>
     </div>
     <div class="footer__copyright copyright">
-      <b class="copyright__text">Разработано</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg width="27" height="34" aria-label="HTML Academy" fill="#63d1bb">
+        <b class="copyright__text">Разработано</b>
+        <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
           <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
         </svg>
       </a>
