--- a/source/catalog.html
+++ b/source/catalog.html
@@ -283,7 +283,7 @@
       </div>
     </section>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
   <script src="js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
 </body>
