--- a/source/index.html
+++ b/source/index.html
@@ -289,7 +289,7 @@
       </div>
     </div>
   </section>
-  <script src="./js/script.js"></script>
+  <script src="js/script.min.js"></script>
   <script src="js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
 </body>
