- form - tablet + desktop

--- a/source/form.html
+++ b/source/form.html
@@ -90,7 +90,7 @@
 
       <div class="order-form__wrapper order-form__wrapper--with-vertical-padding">
         <fieldset class="order-form__fieldset order-form__fieldset--type">
-          <legend class="order-form__legend">Тип</legend>
+          <legend class="order-form__legend order-form__legend--type">Тип</legend>
           <div class="order-form__inputs-wrapper">
             <label class="order-form__label">
               <input class="order-form__input order-form__input--radio" value="Аксессуар для интерьера" type="radio"
@@ -207,9 +207,9 @@
       </div>
 
       <div
-        class="order-form__wrapper order-form__wrapper--with-vertical-padding order-form__wrapper--with-right-padding">
-        <fieldset class="order-form__fieldset">
-          <legend class="order-form__legend order-form__legend--small-margin">Доп</legend>
+        class="order-form__wrapper order-form__wrapper--with-vertical-padding order-form__wrapper--with-right-padding order-form__wrapper--textarea">
+        <fieldset class="order-form__fieldset order-form__fieldset--comment">
+          <legend class="order-form__legend order-form__legend--some-margin">Доп</legend>
           <div class="order-form__input-wrapper">
             <textarea class="order-form__textarea" placeholder="Опишите все ваши пожелания к заказу"
               name="comment"></textarea>
