--- a/source/form.html
+++ b/source/form.html
@@ -262,14 +262,42 @@
       </ul>
     </div>
     <div class="footer__copyright copyright">
-      <b class="copyright__text">Разработано</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <b class="copyright__text">Разработано</b>
         <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
           <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
         </svg>
       </a>
     </div>
   </footer>
+  <section class="modal modal--add-to-cart">
+    <div class="modal__overlay">
+      <div class="modal__container">
+        <h2 class="modal__title">Добавить в корзину</h2>
+        <form class="add-to-cart" action="https://echo.htmlacademy.ru" method="post">
+          <fieldset class="add-to-cart__fieldset">
+            <legend class="add-to-cart__legend">Выберите размер:</legend>
+            <div class="add-to-cart__inputs-wrapper">
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="S" type="radio" name="size" checked>
+                <span class="add-to-cart__radio">S</span>
+              </label>
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="M" type="radio" name="size">
+                <span class="add-to-cart__radio">M</span>
+              </label>
+              <label class="add-to-cart__label">
+                <input class="add-to-cart__input add-to-cart__input--radio" value="L" type="radio" name="size">
+                <span class="add-to-cart__radio">L</span>
+              </label>
+            </div>
+          </fieldset>
+
+          <button class="add-to-cart__button add-to-cart__button--submit" type="submit">Добавить</button>
+        </form>
+      </div>
+    </div>
+  </section>
   <script src="js/script.min.js"></script>
   <script src="js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
