--- a/source/form.html
+++ b/source/form.html
@@ -239,7 +239,7 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-            <svg class="social__icon" width="22" height="21" aria-label="Мы в Инстаграме">
+            <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
               <use xlink:href="img/sprite.svg#icon-insta"></use>
             </svg>
           </a>
@@ -247,14 +247,14 @@
         <li class="social__item">
           <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
 
-            <svg class="social__icon" width="15" height="28" aria-label="Мы в Фейсбуке">
+            <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
               <use xlink:href="img/sprite.svg#icon-fb"></use>
             </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
-            <svg class="social__icon" width="23" height="20" aria-label="Мы в Твиттере">
+            <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
               <use xlink:href="img/sprite.svg#icon-twitter"></use>
             </svg>
           </a>
