--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
         <p class="product-of-week__description">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
         </p>
-        <table cell class="product-of-week__stats product-stats">
+        <table class="product-of-week__stats product-stats">
           <tr>
             <td class="product-stats__title">Цвет:</td>
             <td class="product-stats__value">«Тиффани»/серый</td>
@@ -120,7 +120,7 @@
           <source media="(min-width: 1150px)"
             srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-          <img class="product-of-week__image" src="img/triple-set-mobile@1x.jpg" width="260px" height="315px"
+          <img class="product-of-week__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315"
             alt="Товар недели">
         </picture>
         <span class="product-of-week__price">Цена: 990 руб.</span>
@@ -187,7 +187,7 @@
       </div>
     </section>
     <section class="contacts">
-      <b class="contacts__title">Контакты</b>
+      <h2 class="contacts__title">Контакты</h2>
 
       <table class="contacts__table">
         <tbody class="contacts__table-body">
@@ -212,7 +212,7 @@
       <div class="contacts__map">
         <iframe class="contacts__iframe-map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6058505727422!2d30.32335806116341!3d59.93868224659151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTE4Ng!5e0!3m2!1sru!2sru!4v1573594915893!5m2!1sru!2sru"
-          width="100%" height="100%" style="border:0" allowfullscreen="">
+          width="320" height="457" style="border:0" allowfullscreen="">
         </iframe>
       </div>
 
