--- a/source/catalog.html
+++ b/source/catalog.html
@@ -103,7 +103,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 200 руб.</b>
-              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#">
+              <a class="product-card__cart modal-button" aria-label="Добавить в корзину" href="#">
                 <svg class="product-card__icon" width="21" height="19" aria-label="Добавить в корзину">
                   <use xlink:href="img/sprite.svg#icon-cart"></use>
                 </svg>
@@ -137,7 +137,7 @@
 
             <div class="product-card__footer">
               <b class="product-card__price">690 руб.</b>
-              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#">
+              <a class="product-card__cart modal-button" aria-label="Добавить в корзину" href="#">
                 <svg class="product-card__icon" width="21" height="19" aria-label="Добавить в корзину">
                   <use xlink:href="img/sprite.svg#icon-cart"></use>
                 </svg>
@@ -170,7 +170,7 @@
             </div>
             <div class="product-card__footer">
               <b class="product-card__price">1 500 руб.</b>
-              <a class="product-card__cart button--modal" aria-label="Добавить в корзину" href="#">
+              <a class="product-card__cart modal-button" aria-label="Добавить в корзину" href="#">
                 <svg class="product-card__icon" width="21" height="19" aria-label="Добавить в корзину">
                   <use xlink:href="img/sprite.svg#icon-cart"></use>
                 </svg>
@@ -220,32 +220,30 @@
         <use xlink:href="img/sprite.svg#logo-footer"></use>
       </svg>
     </a>
-    <div class="footer__social social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-            <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
-              <use xlink:href="img/sprite.svg#icon-insta"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+    <ul class="social">
+      <li class="social__item">
+        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+          <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
+            <use xlink:href="img/sprite.svg#icon-insta"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
 
-            <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
-              <use xlink:href="img/sprite.svg#icon-fb"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
-            <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
-              <use xlink:href="img/sprite.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
+          <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
+            <use xlink:href="img/sprite.svg#icon-fb"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
+          <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
+            <use xlink:href="img/sprite.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
     <div class="footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <b class="copyright__text">Разработано</b>
