--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,10 @@
 
   <title>HTML Academy: Мишка</title>
 
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensans.woff2">
+  <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensansbold.woff2">
+
+  <link rel="stylesheet" href="css/style.min.css">
 
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" async></script>
