--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,7 @@
         </picture>
       </a>
 
-      <button class="main-nav__toggle" type="button" aria-label="Открыть меню">
+      <button class="main-nav__toggle main-nav__toggle--no-js" type="button" aria-label="Открыть меню">
         <svg class="main-nav__toggle-icon main-nav__toggle-icon--open" width="18" height="18">
           <use xlink:href="img/sprite.svg#icon-menu-open"></use>
         </svg>
