- index,catalog.html - max-width 1150 для desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -182,75 +182,78 @@
     </section>
 
     <article class="how-its-done">
-      <h2 class="how-its-done__title">
-        Процесс производства</h2>
+        <h2 class="how-its-done__title">
+          Процесс производства</h2>
 
-      <div class="how-its-done__image-wrapper video-player">
-        <picture>
-          <source type="image/webp" media="(min-width: 1150px)"
-            srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
+        <div class="how-its-done__image-wrapper video-player">
+          <picture>
+            <source type="image/webp" media="(min-width: 1150px)"
+              srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
 
-          <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-          <img class="how-its-done__image" width="260" src="img/video-mobile@1x.jpg" alt="Процесс производства">
-        </picture>
+            <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="how-its-done__image" width="260" src="img/video-mobile@1x.jpg" alt="Процесс производства">
+          </picture>
 
-        <button type="button" class="video-player__button">
-          <svg class="video-player__icon" width="102" height="78" aria-label="Включить видео">
-            <use xlink:href="img/sprite.svg#icon-play"></use>
-          </svg>
-        </button>
-      </div>
+          <button type="button" class="video-player__button">
+            <svg class="video-player__icon" width="102" height="78" aria-label="Включить видео">
+              <use xlink:href="img/sprite.svg#icon-play"></use>
+            </svg>
+          </button>
+        </div>
 
-      <p class="how-its-done__description">
-        По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
-      </p>
+        <p class="how-its-done__description">
+          По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+        </p>
 
-      <a class="how-its-done__order button" href="#">Сделать заказ</a>
+        <a class="how-its-done__order button" href="#">Сделать заказ</a>
 
     </article>
   </main>
 
-  <footer class="footer">
-    <a class="footer__logo">
-      <svg class="footer__logo-icon" width="102" height="34" aria-label="Мишка">
-        <use xlink:href="img/sprite.svg#logo-footer"></use>
-      </svg>
-    </a>
-    <ul class="social">
-      <li class="social__item">
-        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-          <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
-            <use xlink:href="img/sprite.svg#icon-insta"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
 
-          <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
-            <use xlink:href="img/sprite.svg#icon-fb"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
-          <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
-            <use xlink:href="img/sprite.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <b class="copyright__text">Разработано</b>
-        <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
-          <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <a class="footer__logo">
+        <svg class="footer__logo-icon" width="102" height="34" aria-label="Мишка">
+          <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+            <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
+              <use xlink:href="img/sprite.svg#icon-insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+
+            <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
+              <use xlink:href="img/sprite.svg#icon-fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
+            <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <b class="copyright__text">Разработано</b>
+          <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
+            <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
   <section class="modal modal--add-to-cart">
