--- a/source/form.html
+++ b/source/form.html
@@ -230,42 +230,44 @@
   </main>
 
   <footer class="footer">
-    <a class="footer__logo">
-      <svg class="footer__logo-icon" width="102" height="34" aria-label="Мишка">
-        <use xlink:href="img/sprite.svg#logo-footer"></use>
-      </svg>
-    </a>
-    <ul class="social">
-      <li class="social__item">
-        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-          <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
-            <use xlink:href="img/sprite.svg#icon-insta"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-
-          <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
-            <use xlink:href="img/sprite.svg#icon-fb"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
-          <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
-            <use xlink:href="img/sprite.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <b class="copyright__text">Разработано</b>
-        <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
-          <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
+    <div class="footer__wrapper">
+      <a class="footer__logo">
+        <svg class="footer__logo-icon" width="102" height="34" aria-label="Мишка">
+          <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+            <svg class="social__icon social__icon--instagram" width="22" height="21" aria-label="Мы в Инстаграме">
+              <use xlink:href="img/sprite.svg#icon-insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+
+            <svg class="social__icon social__icon--facebook" width="15" height="28" aria-label="Мы в Фейсбуке">
+              <use xlink:href="img/sprite.svg#icon-fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
+            <svg class="social__icon social__icon--twitter" width="23" height="20" aria-label="Мы в Твиттере">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <b class="copyright__text">Разработано</b>
+          <svg class="copyright__icon" width="27" height="34" aria-label="HTML Academy">
+            <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
   <section class="modal modal--add-to-cart">
